sema/testdata/gcc-c99-extra/reject/fltconst-1.c
double a = 1.ld;
double b = 1.fd;
double c = 1.di;
double d = 1.dj;
double e = 1.id;
double f = 1.jd;
double g = 1.ddd;
double h = 1.ldd;
double i = 1.dld;
double j = 1.ddl;
double k = 1.fdd;
double l = 1.dfd;
double m = 1.ddf;
